[package]
name = "stringsift"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
boa_interner = { git = "https://github.com/MatinAniss/boa.git", rev = "6dd14f1be7491f91a2bca37fee2aac4451361f97" }

[dependencies]
boa_engine = "0.20.0"
boa_parser = "0.20.0"
clap = { version = "4.5.28", features = ["derive"] }
reqwest-spooftls = { git = "https://github.com/MatinAniss/reqwest-spooftls.git", rev = "6d3798af0c94ee6dfb82e8faebcd20cc24e7ba70" }
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
